# test-mcp-app

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  config.yml  pyproject.toml  run.py  rxconfig.py
host_app/: containers.py  functional_langgraph.py  graph.py  graph_runner.py  host_app.py  ideas.py  langgraph_adapters.py  models.py  process.py  state.py
host_app/components/: __init__.py  chat.py  navbar.py
host_app/graph/: __init__.py  functional_implementation.py  functional_langgraph.py  graph.py  graph_implementation.py  langgraph_adapters.py
host_app/mcp_client/: __init__.py  multi_mcp_client.py
tests/: test_checkpointer.py  test_di_resources.py  test_graph.py
