[project]
name = "host-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.46.0",
    "dotenv>=0.9.9",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "mcp-client",
    "openai>=1.14.0",
    "reflex>=0.7.0",
    "reflex-chakra>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "ANN201",
]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.uv.sources]
mcp-client = { path = "../mcp-client" }

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-pretty>=1.2.0",
    "pytest-timeout>=2.3.1",
]

[tool.pytest.ini_options]
#log_cli = true
#log_cli_level = "DEBUG"
timeout = 300  # Global timeout for all tests (prevent indefinite hangs, but cancels all tests)
asyncio_mode = "auto"  # Automatically detects async test functions and fixtures and treats them as marked
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:langchain_core",
    "ignore::DeprecationWarning:langgraph",
    "ignore::DeprecationWarning:pydantic.v1.typing",

]
